--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hexo-generator-tag": "^0.2.0",
     "hexo-neat": "^1.0.4",
     "hexo-nofollow": "^1.0.5",
+    "hexo-prism-plugin": "^2.3.0",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-pug": "0.0.5",
